--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Audio Streaming</title>
+
+        <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
     <body>
-        <audio controls>
-            <source src="/audio" type="audio/ogg">
-        </audio>
+        <div class="player">
+            <audio controls>
+                <source src="/audio" type="audio/ogg">
+            </audio>
+        </div>
     </body>
 </html>
